@@ -371,6 +371,7 @@ common to all packages:
 \texttt{include/} &  files *.h included by fortran and C source files\\
 \texttt{clib/}    &  external libraries written in C\\
 \texttt{flib/}    &  external libraries written in Fortran\\
+\texttt{FFTxlib/} &  FFT libraries\\
 \texttt{install/} &  installation scripts and utilities\\
 \texttt{pseudo}/  &  pseudopotential files used by examples\\
 \texttt{upftools/}&  converters to unified pseudopotential format (UPF)\\
